--- a/Lab 1-Soojin KIM.html
+++ b/Lab 1-Soojin KIM.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>ITMD-361 Internet Technologies and Web Design</title>
+		<title>TMD-361 Internet Technologies and Web Design</title>
 	</head>
 
 <body>
